Email font size change to prevent overlap on desktop sizes

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -698,6 +698,7 @@
 
 				a {
 					color: inherit;
+					font-size: 10pt;
 				}
 
 				h3 {
